# plugin-web-example

./: CMakeLists.txt  CMakeSettings.json  image.qrc  pluginconfig.json  qml.qrc
html/web/: index.html
qml/web/: web.qml
src/: Document.cpp  Document.h  Web.cpp  Web.h  plugin-web_global.h
